[gd_scene load_steps=2 format=3 uid="uid://d3usjuo7k3r75"]

[ext_resource type="Script" uid="uid://bxg2ixm6hvdgw" path="res://scripts/objects/statment.gd" id="1_g2w7l"]

[node name="Statment" type="Button"]
offset_right = 128.0
offset_bottom = 40.0
text = "STATMENT"
text_overrun_behavior = 4
script = ExtResource("1_g2w7l")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
